# xdns

./: README.md  pyproject.toml
src/xdns/: __init__.py  cli.py  client.py
